--- a/docker/work/preprocess_knock_SQL.ipynb
+++ b/docker/work/preprocess_knock_SQL.ipynb
@@ -2844,7 +2844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -3021,7 +3021,7 @@
        " ('CS005813000015', '金谷 恵梨香', '1', '女性', datetime.date(1929, 4, 9), 89, '165-0032', '東京都中野区鷺宮**********', 'S13005', '20150506', '0-00000000-0')]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3041,7 +3041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -3218,7 +3218,7 @@
        " ('CS014113000008', '矢口 莉緒', '1', '女性', datetime.date(2007, 3, 5), 12, '260-0041', '千葉県千葉市中央区東千葉**********', 'S12014', '20150622', '3-20091108-6')]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3238,7 +3238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -3302,12 +3302,12 @@
        "            <td>7</td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>CS040415000200</td>\n",
+       "            <td>CS001412000160</td>\n",
        "            <td>5280</td>\n",
        "            <td>9</td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>CS002415000728</td>\n",
+       "            <td>CS009415000038</td>\n",
        "            <td>5280</td>\n",
        "            <td>9</td>\n",
        "        </tr>\n",
@@ -3323,11 +3323,11 @@
        " ('ZZ000000000000', 5480, 4),\n",
        " ('ZZ000000000000', 5440, 7),\n",
        " ('CS021515000089', 5440, 7),\n",
-       " ('CS040415000200', 5280, 9),\n",
-       " ('CS002415000728', 5280, 9)]"
+       " ('CS001412000160', 5280, 9),\n",
+       " ('CS009415000038', 5280, 9)]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3359,7 +3359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -3403,12 +3403,12 @@
        "            <td>4</td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>CS015515000034</td>\n",
+       "            <td>ZZ000000000000</td>\n",
        "            <td>5480</td>\n",
        "            <td>5</td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>ZZ000000000000</td>\n",
+       "            <td>CS015515000034</td>\n",
        "            <td>5480</td>\n",
        "            <td>6</td>\n",
        "        </tr>\n",
@@ -3423,12 +3423,12 @@
        "            <td>8</td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>ZZ000000000000</td>\n",
+       "            <td>CS030515000189</td>\n",
        "            <td>5280</td>\n",
        "            <td>9</td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>CS020414000081</td>\n",
+       "            <td>ZZ000000000000</td>\n",
        "            <td>5280</td>\n",
        "            <td>10</td>\n",
        "        </tr>\n",
@@ -3440,15 +3440,15 @@
        " ('ZZ000000000000', 6800, 2),\n",
        " ('CS028605000002', 5780, 3),\n",
        " ('ZZ000000000000', 5480, 4),\n",
-       " ('CS015515000034', 5480, 5),\n",
-       " ('ZZ000000000000', 5480, 6),\n",
+       " ('ZZ000000000000', 5480, 5),\n",
+       " ('CS015515000034', 5480, 6),\n",
        " ('ZZ000000000000', 5440, 7),\n",
        " ('CS021515000089', 5440, 8),\n",
-       " ('ZZ000000000000', 5280, 9),\n",
-       " ('CS020414000081', 5280, 10)]"
+       " ('CS030515000189', 5280, 9),\n",
+       " ('ZZ000000000000', 5280, 10)]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3473,11 +3473,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "1 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>count</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>104681</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(104681,)]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "%%sql\n"
+    "%%sql\n",
+    "SELECT count(*) FROM receipt;"
    ]
   },
   {
@@ -3490,11 +3524,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "1 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>count</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>8307</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(8307,)]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "%%sql\n"
+    "%%sql\n",
+    "SELECT count(DISTINCT customer_id) FROM receipt; -- 重複許さないDISTINCT"
    ]
   },
   {
@@ -3507,11 +3575,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "10 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>store_cd</th>\n",
+       "            <th>amt</th>\n",
+       "            <th>qty</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>S12007</td>\n",
+       "            <td>638761</td>\n",
+       "            <td>2099</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>S13017</td>\n",
+       "            <td>748221</td>\n",
+       "            <td>2376</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>S13043</td>\n",
+       "            <td>587895</td>\n",
+       "            <td>1881</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>S13052</td>\n",
+       "            <td>100314</td>\n",
+       "            <td>250</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>S13016</td>\n",
+       "            <td>793773</td>\n",
+       "            <td>2432</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>S14027</td>\n",
+       "            <td>714550</td>\n",
+       "            <td>2303</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>S13009</td>\n",
+       "            <td>808870</td>\n",
+       "            <td>2486</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>S14022</td>\n",
+       "            <td>651328</td>\n",
+       "            <td>2047</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>S13019</td>\n",
+       "            <td>827833</td>\n",
+       "            <td>2541</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>S13039</td>\n",
+       "            <td>611888</td>\n",
+       "            <td>1981</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('S12007', 638761, 2099),\n",
+       " ('S13017', 748221, 2376),\n",
+       " ('S13043', 587895, 1881),\n",
+       " ('S13052', 100314, 250),\n",
+       " ('S13016', 793773, 2432),\n",
+       " ('S14027', 714550, 2303),\n",
+       " ('S13009', 808870, 2486),\n",
+       " ('S14022', 651328, 2047),\n",
+       " ('S13019', 827833, 2541),\n",
+       " ('S13039', 611888, 1981)]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "%%sql\n"
+    "%%sql\n",
+    "SELECT\n",
+    "store_cd,\n",
+    "SUM(amount) as amt,\n",
+    "SUM(quantity) as qty\n",
+    "FROM receipt\n",
+    "GROUP BY store_cd\n",
+    "LIMIT 10;"
    ]
   },
   {
@@ -3524,11 +3690,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "10 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>customer_id</th>\n",
+       "            <th>sales_ymd</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>CS001311000059</td>\n",
+       "            <td>20180211</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CS004614000122</td>\n",
+       "            <td>20181228</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CS003512000043</td>\n",
+       "            <td>20180106</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CS011615000061</td>\n",
+       "            <td>20190503</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CS029212000033</td>\n",
+       "            <td>20180621</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CS007515000119</td>\n",
+       "            <td>20190511</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CS034515000123</td>\n",
+       "            <td>20190708</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CS004315000058</td>\n",
+       "            <td>20170517</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CS026414000014</td>\n",
+       "            <td>20190720</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CS001615000099</td>\n",
+       "            <td>20170729</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('CS001311000059', 20180211),\n",
+       " ('CS004614000122', 20181228),\n",
+       " ('CS003512000043', 20180106),\n",
+       " ('CS011615000061', 20190503),\n",
+       " ('CS029212000033', 20180621),\n",
+       " ('CS007515000119', 20190511),\n",
+       " ('CS034515000123', 20190708),\n",
+       " ('CS004315000058', 20170517),\n",
+       " ('CS026414000014', 20190720),\n",
+       " ('CS001615000099', 20170729)]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "%%sql\n"
+    "%%sql\n",
+    "SELECT\n",
+    "customer_id,\n",
+    "MAX(sales_ymd) as sales_ymd\n",
+    "FROM receipt\n",
+    "GROUP BY customer_id\n",
+    "LIMIT 10;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### メモ\n",
+    "\n",
+    "`GROUP BY` なしで実行したときの結果\n",
+    "\n",
+    "```\n",
+    "(psycopg2.errors.GroupingError) 列\"receipt.customer_id\"はGROUP BY句で指定するか、集約関数内で使用しなければなりません\n",
+    "LINE 2: customer_id,\n",
+    "        ^\n",
+    "\n",
+    "[SQL: SELECT\n",
+    "customer_id,\n",
+    "MAX(sales_ymd) as sales_ymd\n",
+    "FROM receipt\n",
+    "LIMIT 10;]\n",
+    "(Background on this error at: https://sqlalche.me/e/14/f405)\n",
+    "```\n",
+    "\n",
+    "集計関数(MAXなど)を使うときは、主計対象のカラムとセレクトしたいカラムの `GROUP BY` が必要。"
    ]
   },
   {
